Closed Bug 221631 Opened 22 years ago Closed 22 years ago

vcard do not support accented characters

Categories

(MailNews Core :: Backend, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.6alpha

People

(Reporter: pascalc|PTO, Assigned: mscott)

References

Details

Attachments

(1 file, 1 obsolete file)

build 2003100804 WinXP 1 create a vcard for an account with fields that contain accented latin characters ex : Aménagement is changed into : Aménagement
.
Assignee: sspitzer → scott
fix in hand
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.6alpha
we do UTF to UCS2 here because we do UCS2 to UTF8 in nsAbCardProperty.cpp: static VObject* myAddPropValue(VObject *o, const char *propName, const PRUnichar *propValue, PRBool *aCardHasData) { if (aCardHasData) *aCardHasData = PR_TRUE; return addPropValue(o, propName, NS_ConvertUCS2toUTF8(propValue).get()); } there's a similar issue in mimevcrd.cpp, looking into it...
Attached patch complete patchSplinter Review
our vcard attachments are in utf8
Attachment #133139 - Attachment is obsolete: true
fixed. this has r/sr=bienvenu
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Blocks: 221542
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: