fix for bug #221631

vCards do not support accented characters

r/sr=bienvenu